Solved all question at last

--- a/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
+++ b/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
@@ -2755,15 +2755,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your expression is: \"3x-6=15\"\n",
+      "x = 7.0\n",
+      "\n",
+      "Your expression is: \"-3x-6=15\"\n",
+      "x = -7.0\n",
+      "\n",
+      "Your expression is: \"3x+3=15\"\n",
+      "x = 4.0\n",
+      "\n",
+      "Your expression is: \"3x=15\"\n",
+      "3x\n",
+      "x = 5.0\n",
+      "\n",
+      "Your expression is: \"2x=-30\"\n",
+      "2x\n",
+      "x = -15.0\n",
+      "\n",
+      "Your expression is: \"20x= 100\"\n",
+      "20x\n",
+      "x = 5.0\n",
+      "\n",
+      "Your expression is: \"x= -100\"\n",
+      "x = -100.0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "# Function - this function parse the simple linear equation to values of a, b, c in ax+b = c\n",
+    "#       Expressions which can be parsed are as below where a,b,c has to be valid numbers/float numbers\n",
+    "#       ax+b=c      -ax+b=c     b+ax=c     -b+ax = c    ax-b=c      ax=c    x=c     -ax-b=-c etc\n",
+    "# expression has to be valid expression\n",
     "def parse_equation(equation: str):\n",
     "    lhs_expr, rhs_expr = equation.split('=')\n",
-    "    lhs_expr.strip()\n",
+    "    lhs_expr = lhs_expr.strip()\n",
     "    rhs_number = float(rhs_expr.strip())\n",
-    "\n"
+    "    \n",
+    "    starts_with_minus = False\n",
+    "    start_multiplier = 1\n",
+    "\n",
+    "    # Check if starts with -\n",
+    "    if lhs_expr.startswith('-'):\n",
+    "        lhs_expr = lhs_expr.removeprefix('-')\n",
+    "        starts_with_minus = True\n",
+    "        start_multiplier = -1\n",
+    "\n",
+    "    if len(lhs_expr) <= 1:\n",
+    "        # case of 'x = number'\n",
+    "        if lhs_expr == 'x':\n",
+    "            if starts_with_minus:\n",
+    "                return -1, 0, rhs_number\n",
+    "            return 1, 0, rhs_number\n",
+    "        else:\n",
+    "            print('Not valid expression')\n",
+    "            return 0, 0, 0\n",
+    "\n",
+    "    operator = ''\n",
+    "    no_operator = False\n",
+    "    \n",
+    "    operator_multiplier = 1\n",
+    "\n",
+    "    if lhs_expr.find('+') > 0:\n",
+    "        operator = '+'\n",
+    "    elif lhs_expr.find('-') > 0:\n",
+    "        operator_multiplier = -1\n",
+    "        operator = '-'\n",
+    "    else:\n",
+    "        no_operator = True\n",
+    "    \n",
+    "    coef = 1\n",
+    "    b = 0\n",
+    "    if not no_operator:\n",
+    "        lhs_split = lhs_expr.split(operator)\n",
+    "        if lhs_split[0].find('x') >= 0:\n",
+    "            coef = float(lhs_split[0].removesuffix('x')) * start_multiplier\n",
+    "\n",
+    "            if(len(lhs_split[1]) > 0):\n",
+    "                b = float(lhs_split[1]) * operator_multiplier\n",
+    "\n",
+    "        elif lhs_split[1].find('x') >= 0:\n",
+    "            coef = float(lhs_split[1].removesuffix('x')) * (operator_multiplier)\n",
+    "\n",
+    "            if(len(lhs_split[0]) > 0):\n",
+    "                b = float(lhs_split[0]) * start_multiplier\n",
+    "\n",
+    "    else:\n",
+    "        # Cases like 5x = 10, 6x = 30 etx\n",
+    "        print(lhs_expr)\n",
+    "        coef = float(lhs_expr.removesuffix('x'))\n",
+    "    \n",
+    "    return coef, b, rhs_number\n",
+    "\n",
+    "# Function to solve and get value of x\n",
+    "def get_x_value(a: float, b: float, c:float) -> float:\n",
+    "    return (c-b)/a\n",
+    "\n",
+    "#Function - solves the expression\n",
+    "def solve_linear_expression(expression: str):\n",
+    "    print(f'Your expression is: \"{expression}\"')\n",
+    "    a, b, c = parse_equation(expression)\n",
+    "\n",
+    "    if a == 0:\n",
+    "        print('Infinite solutions! Not valid expression.')\n",
+    "    \n",
+    "    x = get_x_value(a, b, c)\n",
+    "\n",
+    "    print(f'x = {x}')\n",
+    "    print()\n",
+    "\n",
+    "\n",
+    "solve_linear_expression('3x-6=15')\n",
+    "solve_linear_expression('-3x-6=15')\n",
+    "solve_linear_expression('3x+3=15')\n",
+    "solve_linear_expression('3x=15')\n",
+    "solve_linear_expression('2x=-30')\n",
+    "solve_linear_expression('20x= 100')\n",
+    "solve_linear_expression('x= -100')\n"
    ]
   },
   {
@@ -2982,10 +3097,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roots are real and different.\n",
+      "x = -0.4384471871911697 or x = -4.561552812808831\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import cmath\n",
+    "# Using cmath - to get the complex number (from negative sqaure root)\n",
+    "\n",
+    "# Function - prints the roots and related info\n",
+    "def print_roots_of_quadratic_equation(a: int, b: int, c: int):\n",
+    "    if a == 0:\n",
+    "        print('Not a valid Quadratic equation.')\n",
+    "    else:\n",
+    "        # D = b2 - 4ac\n",
+    "        D = (b ** 2) - (4 * a * c)\n",
+    "\n",
+    "        if D == 0:\n",
+    "            root = (-b  / (2 * a))\n",
+    "            print('Roots are real and same.')\n",
+    "            print(f'x = {root}')\n",
+    "        elif D > 0:\n",
+    "            square_root_D = math.sqrt(D)\n",
+    "            root1 = (-b + square_root_D)/(2 * a)\n",
+    "            root2 = (-b - square_root_D)/(2 * a)\n",
+    "            print('Roots are real and different.')\n",
+    "            print(f'x = {root1} or x = {root2}')\n",
+    "        else:\n",
+    "            square_root_D = cmath.sqrt(D)\n",
+    "            root1 = (-b + square_root_D)/(2 * a)\n",
+    "            root2 = (-b - square_root_D)/(2 * a)\n",
+    "            print('Roots are complex.')\n",
+    "            print(f'x = {root1} or x = {root2}')\n",
+    "\n",
+    "\n",
+    "# Compute and print result\n",
+    "print_roots_of_quadratic_equation(1, 5, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
