Solved Quartic equation using  https://www.1728.org/quartic2.htm

--- a/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
+++ b/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
@@ -3092,56 +3092,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 29. Build a program that determines the roots of a quartic equation using numerical methods."
+    "### 29. Build a program that determines the roots of a quartic equation using numerical methods.\n",
+    "\n",
+    "#### In algebra, a quartic function is a function of the form\n",
+    "\n",
+    "    > f(x) = ax**4 + bx**3 + cx**2 + dx + e = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Roots are real and different.\n",
-      "x = -0.4384471871911697 or x = -4.561552812808831\n"
+      "Roots are as below: \n",
+      "Root 1: 5.333333333333336\n",
+      "Root 2: 3.333333333333331\n",
+      "Root 3: -3.666666666666664\n",
+      "Root 4: -5.66666666666667\n"
      ]
     }
    ],
    "source": [
+    "# Approach - As mentioned here https://www.1728.org/quartic2.htm\n",
+    "# Limitation - for now can not print unreal roots \n",
+    "\n",
     "import math\n",
-    "import cmath\n",
-    "# Using cmath - to get the complex number (from negative sqaure root)\n",
     "\n",
-    "# Function - prints the roots and related info\n",
-    "def print_roots_of_quadratic_equation(a: int, b: int, c: int):\n",
-    "    if a == 0:\n",
-    "        print('Not a valid Quadratic equation.')\n",
-    "    else:\n",
-    "        # D = b2 - 4ac\n",
-    "        D = (b ** 2) - (4 * a * c)\n",
+    "# Function - returns f value as per above formula\n",
+    "def compute_f_cubic(a: float, b: float, c: float):\n",
+    "    return ((3 * c / a) - ((b ** 2) / (a ** 2))) / 3\n",
     "\n",
-    "        if D == 0:\n",
-    "            root = (-b  / (2 * a))\n",
-    "            print('Roots are real and same.')\n",
-    "            print(f'x = {root}')\n",
-    "        elif D > 0:\n",
-    "            square_root_D = math.sqrt(D)\n",
-    "            root1 = (-b + square_root_D)/(2 * a)\n",
-    "            root2 = (-b - square_root_D)/(2 * a)\n",
-    "            print('Roots are real and different.')\n",
-    "            print(f'x = {root1} or x = {root2}')\n",
+    "\n",
+    "# Function - returns g value as per above formula\n",
+    "def compute_g_cubic(a: float, b: float, c: float, d: float):\n",
+    "    return (((2 * (b ** 3)) / (a ** 3)) - ((9 * b * c) / (a ** 2)) + (27 * d / a)) /27\n",
+    "\n",
+    "\n",
+    "# Function - returns h value as per above formula\n",
+    "def compute_h_cubic(g: float, f: float):\n",
+    "    return ((g ** 2) / 4 + (f ** 3) / 27)\n",
+    "\n",
+    "# Main Function - Function return the roots of the cubic equation\n",
+    "def get_roots_of_cubic_equation(a: float, b: float, c: float, d: float):\n",
+    "    # Validation\n",
+    "    if a == 0 and b == 0:\n",
+    "        print('This is linear equation, not cubic equation.')\n",
+    "    elif a == 0:\n",
+    "        print('This is Quadratic equation, not cubic equation.')\n",
+    "    \n",
+    "    # Compute f, g, and h\n",
+    "    f = compute_f_cubic(a, b, c)\n",
+    "    g = compute_g_cubic(a, b, c, d)\n",
+    "    h = compute_h_cubic(g, f)\n",
+    "\n",
+    "    # All roots are same and real\n",
+    "    if f == 0 and g == 0 and h == 0:\n",
+    "        root = 0\n",
+    "        if (d / a) >= 0:\n",
+    "            root = (d / a) ** (1 / 3) * -1\n",
     "        else:\n",
-    "            square_root_D = cmath.sqrt(D)\n",
-    "            root1 = (-b + square_root_D)/(2 * a)\n",
-    "            root2 = (-b - square_root_D)/(2 * a)\n",
-    "            print('Roots are complex.')\n",
-    "            print(f'x = {root1} or x = {root2}')\n",
+    "            root = (-d / a) ** (1 / 3)\n",
+    "        \n",
+    "        return root, root, root\n",
+    "\n",
+    "    # All roots are real\n",
+    "    elif h <= 0:\n",
+    "        i = math.sqrt(((g ** 2) / 4) - h)\n",
+    "        j = i ** (1 / 3)\n",
+    "        k = math.acos(-(g / (2 * i)))\n",
+    "\n",
+    "        L = j * - 1\n",
+    "        M = math.cos(k / 3)\n",
+    "        N = math.sqrt(3) * math.sin(k / 3)\n",
+    "        P = (b / (3 * a)) * - 1\n",
+    "\n",
+    "        root1 = 2 * j * math.cos(k / 3) - (b / (3 * a))\n",
+    "        root2 = L * (M + N) + P\n",
+    "        root3 = L * (M - N) + P\n",
+    "\n",
+    "        return root1, root2, root3\n",
+    "\n",
+    "    # 1 real and 2 complex roots\n",
+    "    elif h > 0:                                 \n",
+    "        R = -(g / 2) + math.sqrt(h)\n",
+    "        if R >= 0:\n",
+    "            S = R ** (1 / 3)\n",
+    "        else:\n",
+    "            S = (-R) ** (1 / 3) * -1\n",
+    "        T = -(g / 2) - math.sqrt(h)\n",
+    "        if T >= 0:\n",
+    "            U = (T ** (1 / 3))\n",
+    "        else:\n",
+    "            U = ((-T) ** (1 / 3)) * -1\n",
+    "\n",
+    "        root1 = (S + U) - (b / (3 * a))\n",
+    "        root2 = -(S + U) / 2 - (b / (3 * a)) + (S - U) * math.sqrt(3) * 0.5j\n",
+    "        root3 = -(S + U) / 2 - (b / (3 * a)) - (S - U) * math.sqrt(3) * 0.5j\n",
+    "\n",
+    "        return root1, root2, root3\n",
     "\n",
     "\n",
-    "# Compute and print result\n",
-    "print_roots_of_quadratic_equation(1, 5, 2)"
+    "# Function - returns f value as per above formula f= c - (3b**2/8)\n",
+    "def compute_f_quartic(b: float, c: float):\n",
+    "    return c - (3 * (b**2) / 8)\n",
+    "\n",
+    "\n",
+    "# Function - returns g value as per above formula g = d + ((b**3 )/ 8) - (b*c/2)\n",
+    "def compute_g_quartic(b: float, c: float, d: float):\n",
+    "    return d + ((b**3)/8) - (b*c/2)\n",
+    "\n",
+    "\n",
+    "# Function - returns h value as per above formula h = e - (3*(b**4)/256) + ((b**2) * c/16) - ( b*d/4)\n",
+    "def compute_h_quartic(b: float, c: float, d: float, e: float):\n",
+    "    return e - (3*(b**4)/256) + ((b**2) * (c / 16)) - (b * d / 4)\n",
+    "\n",
+    "def print_roots_of_quartic_equation(a: float, b: float, c: float, d: float, e: float):\n",
+    "    # To make a = 1, we divide all with a - as per  https://www.1728.org/quartic2.htm\n",
+    "    b /= a\n",
+    "    c /= a\n",
+    "    d /= a\n",
+    "    e /= a\n",
+    "\n",
+    "    f = compute_f_quartic(b, c)\n",
+    "    g = compute_g_quartic(b, c, d)\n",
+    "    h = compute_h_quartic(b, c, d, e)\n",
+    "\n",
+    "    # Next, we \"plug\" the numbers 'f', 'g' and 'h' into the following cubic equation: Y**3 + (f/2)*Y**2 + ((f**2 -4*h)/16)*Y -g**2/64 = 0\n",
+    "    a_cubic = 1\n",
+    "    b_cubic = f/2\n",
+    "    c_cubic = (((f**2) -(4*h))/16)\n",
+    "    d_cubic = (g**2)/64\n",
+    "\n",
+    "    y1, y2, y3 = get_roots_of_cubic_equation(a_cubic, b_cubic, c_cubic, d_cubic)\n",
+    "\n",
+    "    # Let 'p' and 'q' be the square roots of ANY 2 non-zero roots (Y1 Y2 or Y3).\n",
+    "    # p=SqRoot(20.25),  q=SqRoot(1); r= -g/(8*pq); s= b/(4*a)\n",
+    "    # Get non zero out of y1, y2, y3\n",
+    "    non_zero_y_1 = y1 if y1 != 0 else y2 if y2 != 0 else y3\n",
+    "    non_zero_y_2 = y3 if y3 != 0 else y2 if y2 != 0 else y1\n",
+    "\n",
+    "    p = math.sqrt(non_zero_y_1)\n",
+    "    q = math.sqrt(non_zero_y_2)\n",
+    "    r = -g / (8*p*q)\n",
+    "    s = b/(4*a)\n",
+    "\n",
+    "    #Then the four roots of the quartic equation are:\n",
+    "    #    X1= p + q + r -s \n",
+    "    #    X2= p - q - r -s\n",
+    "    #    X3= -p + q - r -s\n",
+    "    #    X4= -p - q + r -s\n",
+    "\n",
+    "    root1 = p + q + r -s \n",
+    "    root2 = p - q - r -s\n",
+    "    root3 = -p + q - r -s\n",
+    "    root4 = -p - q + r -s\n",
+    "\n",
+    "    print('Roots are as below: ')\n",
+    "    print(f'Root 1: {root1}')\n",
+    "    print(f'Root 2: {root2}')\n",
+    "    print(f'Root 3: {root3}')  \n",
+    "    print(f'Root 4: {root4}')  \n",
+    "\n",
+    "# Print root of Quartic equation - 3X**4   + 6X**3   - 123X**2   - 126X + 1,080 = 0\n",
+    "print_roots_of_quartic_equation(a=3, b=6, c=-123, d=-126, e=1080)"
    ]
   },
   {
