Done first section

--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -707,6 +707,389 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 16. Write a Python program to find the GCD (Greatest Common Divisor) of two numbers using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greatest common divisor of 99 and 66 is : 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GCD is also known as HCF. The highest common Factor.\n",
+    "# highest number with which our two numbers are divided without remainder.\n",
+    "# Since it is highest number - we will start from reverse direction - from smallest number of two towards 1 \n",
+    "# although we can start from any number but to optimize we will start from smallest number of given numbers\n",
+    "\n",
+    "def find_gcd(number1: int, number2: int) -> int:\n",
+    "    '''\n",
+    "    Function finds the GCF of given two numbers - using loop\n",
+    "    '''\n",
+    "    # Check boundary condition\n",
+    "    # If any number is zero then other number becomes gcd, because zero is divisible by anynumber\n",
+    "    if number1 == 0:\n",
+    "        return number2\n",
+    "    elif number2 == 0:\n",
+    "        return number1\n",
+    "    \n",
+    "    gcd = 1\n",
+    "    small_num, large_num = min(number1, number2),  max(number1, number2)\n",
+    "    \n",
+    "    # Check if both numbers are divisible by current number if yes then return\n",
+    "    for num in range(small_num, 1, -1):\n",
+    "        if(large_num % num == 0 and small_num % num == 0):\n",
+    "            gcd = num\n",
+    "            break\n",
+    "        \n",
+    "    return gcd\n",
+    "\n",
+    "# Take input of numbers\n",
+    "number_1 = int(input('Enter a number 1: '))\n",
+    "number_2 = int(input('Enter a number 2: '))\n",
+    "\n",
+    "# Find gcd\n",
+    "gcd = find_gcd(number_1, number_2)\n",
+    "\n",
+    "# Print result\n",
+    "print(f'Greatest common divisor of {number_1} and {number_2} is : {gcd}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17. Create a Python program that checks if a string is a palindrome using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Able was I ere I saw elba\" is a palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(input_string: str)-> bool:\n",
+    "    '''\n",
+    "    Function - checks if string is palindrome or not - Return True if Palindrome else False - using for loop\n",
+    "    '''\n",
+    "\n",
+    "    # Removing spaces and converting to lowercase for case-insensitive comparison\n",
+    "    input_string = input_string.replace(\" \", \"\").lower()\n",
+    "    \n",
+    "    # Using a for loop to compare characters from start to end (till middle of string to optimize)\n",
+    "    for i in range(len(input_string)//2):\n",
+    "        if input_string[i] != input_string[-i-1]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Create a string\n",
+    "test_string = 'Able was I ere I saw elba'\n",
+    "\n",
+    "# Check if string is palindrome or not\n",
+    "result = is_palindrome(test_string)\n",
+    "\n",
+    "# Print\n",
+    "if result:\n",
+    "    print(f'\"{test_string}\" is a palindrome')\n",
+    "else:\n",
+    "    print(f'\"{test_string}\" is not a palindrome')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 18. Write a Python program to remove duplicates from a list using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique elements in the list: [1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def remove_duplicates(input_list: list) -> list:\n",
+    "    '''\n",
+    "    Function - Returns a list with duplicates removed from the list - using for loop\n",
+    "    '''\n",
+    "\n",
+    "    list_with_no_duplicates = []\n",
+    "\n",
+    "    for item in input_list:\n",
+    "        if item not in list_with_no_duplicates:\n",
+    "            list_with_no_duplicates.append(item)\n",
+    "\n",
+    "    return list_with_no_duplicates\n",
+    "\n",
+    "# Create a list\n",
+    "list1 = [1, 2, 3, 2, 4, 1, 5, 6, 3, 7]\n",
+    "\n",
+    "# Remove duplicates\n",
+    "list_of_unique_elements = remove_duplicates(list1)\n",
+    "\n",
+    "# Print\n",
+    "print(f'Unique elements in the list: {list_of_unique_elements}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19. Create a Python program that counts the number of words in a sentence using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of words in \"Hello my name is Robin Pabbi\" is: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_words(sentence: str) -> int:\n",
+    "    '''\n",
+    "    Function - Count the number of words in sentence - using for loop\n",
+    "    '''\n",
+    "    word_count = 0\n",
+    "\n",
+    "    # Using for loop to count the number of words\n",
+    "    for word in sentence.split(' '):\n",
+    "        word_count += 1\n",
+    "\n",
+    "    return word_count\n",
+    "\n",
+    "# Take string input from the user\n",
+    "sentence = input('Enter sentence: ')\n",
+    "\n",
+    "# Count number of words\n",
+    "num_of_words = count_words(sentence)\n",
+    "\n",
+    "# Print \n",
+    "print(f'Count of words in \"{sentence}\" is: {num_of_words}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20. Write a Python program to find the sum of all odd numbers from 1 to 50 using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of odd numbers from 1 to 50 is: 625\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_of_odd_numbers(range_of_numbers: range) -> int:\n",
+    "    '''\n",
+    "    Compute sum of odd numbers from give range - using for loop\n",
+    "    '''\n",
+    "    sum_result = 0\n",
+    "\n",
+    "    for num in range_of_numbers:\n",
+    "        if num % 2 != 0:\n",
+    "            sum_result += num\n",
+    "    \n",
+    "    return sum_result\n",
+    "\n",
+    "# Compute sum of odd numbers from 1 to 50 (51 upper bound)\n",
+    "sum_of_odds = sum_of_odd_numbers(range(1, 51))\n",
+    "\n",
+    "# Print\n",
+    "print(f'Sum of odd numbers from 1 to 50 is: {sum_of_odds}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 21. Write a Python program that checks if a given year is a leap year using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 2024 is a leap year.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leap year is a year which is divisible by 4\n",
+    "\n",
+    "# Note: not using for loop as suggested by SME that there is a mistake in question.\n",
+    "# There is no logic of using for loop for leap year computation\n",
+    "\n",
+    "def is_leap_year(year: int) -> bool:\n",
+    "    '''\n",
+    "    Function checks if the year is leap year or not\n",
+    "    '''\n",
+    "    if year % 4 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "# Take input of year\n",
+    "year = int(input('Enter year: '))\n",
+    "\n",
+    "# Print\n",
+    "if is_leap_year(year):\n",
+    "    print(f'Year {year} is a leap year.')\n",
+    "else:\n",
+    "    print(f'Year {year} is a not leap year.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 22. Create a Python program that calculates the square root of a number using a for loop.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sqrt of the number 16 is : 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_square_root(number: int):\n",
+    "    '''\n",
+    "    Compute sqrt of the number using for loop.\n",
+    "    '''\n",
+    "    # Check if the number is non-negative\n",
+    "    if number < 0:\n",
+    "        print(\"Cannot calculate the square root of a negative number.\")\n",
+    "    else:\n",
+    "        # Initial guess for the square root\n",
+    "        probable_sqrt = number / 2.0\n",
+    "        \n",
+    "        # Number of iterations for approximation - we can adjust this value for accuracy\n",
+    "        num_iterations = 10  \n",
+    "        \n",
+    "        # Use a for loop to iteratively improve the approximation\n",
+    "        for _ in range(num_iterations):\n",
+    "            probable_sqrt = 0.5 * (probable_sqrt + number / probable_sqrt)\n",
+    "            \n",
+    "        return probable_sqrt\n",
+    "\n",
+    "# Take input from user\n",
+    "number = int(input('Enter the number:'))\n",
+    "\n",
+    "# Find sqrt\n",
+    "sqrt_of_num = calculate_square_root(number)\n",
+    "\n",
+    "# Print\n",
+    "print(f'Sqrt of the number {number} is : {sqrt_of_num}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 23. Write a Python program to find the LCM (Least Common Multiple) of two numbers using a for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The LCM of 12 and 18 is: 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LCM is smallest common multiple of both numbers, we start with max number and towards num1 * num2\n",
+    "\n",
+    "def find_lcm(num1: int, num2: int):\n",
+    "    '''\n",
+    "    Function return the LCM of two numbers\n",
+    "    '''\n",
+    "    # Find the maximum of the two numbers\n",
+    "    max_num = max(num1, num2)\n",
+    "\n",
+    "    for lcm in range(max_num, num1*num2 + 1, max_num):\n",
+    "        if lcm % num1 == 0 and lcm % num2 == 0:\n",
+    "            return lcm\n",
+    "        \n",
+    "\n",
+    "# Take input of numbers from user\n",
+    "number1 = int(input('Enter number1: '))\n",
+    "number2 = int(input('Enter number2: '))\n",
+    "\n",
+    "# Find LCM\n",
+    "lcm_result = find_lcm(number1, number2)\n",
+    "\n",
+    "# Print\n",
+    "print(f\"The LCM of {number1} and {number2} is: {lcm_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## If else :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
