Some more questions solved.

--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -2754,7 +2754,179 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 1. Explain the purpose of the `filter()` function in Python and provide an example of how it can be used to filter elements from an iterable.\n",
+    "\n",
+    "Ans.\n",
+    "\n",
+    "> The 'filter()' function is used to filter elements from an iterable (like a list) based on a specified condition. It takes two arguments: a function and an iterable. The function you pass to 'filter()' should return True for the elements we want to keep.\n",
+    "\n",
+    "Example of how to use the filter() function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of numbers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "# Function to check if a number is even\n",
+    "def is_even(x):\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "# Use filter() to keep only the even numbers\n",
+    "even_numbers = filter(is_even, numbers)\n",
+    "\n",
+    "# Convert the result to a list (because filter() returns an iterator)\n",
+    "even_numbers_list = list(even_numbers)\n",
+    "\n",
+    "# Print\n",
+    "print(even_numbers_list)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Write a Python program that uses the `filter()` function to select even numbers from a list of integers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of numbers\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "# Function to check if a number is even\n",
+    "def is_even(x):\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "# Use filter() to keep only the even numbers\n",
+    "even_numbers = filter(is_even, numbers)\n",
+    "\n",
+    "# Convert the result to a list (because filter() returns an iterator)\n",
+    "even_numbers_list = list(even_numbers)\n",
+    "\n",
+    "# Print\n",
+    "print(even_numbers_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Create a Python program that uses the `filter()` function to select names that start with a specific letter from a list of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 4. Write a Python program that uses the `filter()` function to select prime numbers from a list of integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. How can you use the `filter()` function to remove None values from a list in Python?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Create a Python program that uses `filter()` to select words longer than a certain length from a list of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Write a Python program that uses the `filter()` function to select elements greater than a specified threshold from a list of values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recursion:-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Explain the concept of recursion in Python. How does it differ from iteration?\n",
+    "### 2. Write a Python program to calculate the factorial of a number using recursion.\n",
+    "### 3. Create a recursive Python function to find the nth Fibonacci number.\n",
+    "### 4. Write a recursive Python function to calculate the sum of all elements in a list.\n",
+    "### 5. How can you prevent a recursive function from running indefinitely, causing a stack overflow error?\n",
+    "### 6. Create a recursive Python function to find the greatest common divisor (GCD) of two numbers using the Euclidean algorithm.\n",
+    "### 7. Write a recursive Python function to reverse a string.\n",
+    "### 8. Create a recursive Python function to calculate the power of a number (x^n).\n",
+    "### 9. Write a recursive Python function to find all permutations of a given string.\n",
+    "### 10. Write a recursive Python function to check if a string is a palindrome.\n",
+    "### 11. Create a recursive Python function to generate all possible combinations of a list of elements.\n"
+   ]
   }
  ],
  "metadata": {
