--- a/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
+++ b/DayWiseMaterial/Assignments/17th_Sept_FSDS.ipynb
@@ -3534,8 +3534,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ans.\n",
+    "\n",
+    "> A function is a block of organized, reusable code that performs a specific task or set of tasks. It's a named sequence of statements that can be called, or \"invoked,\" as a unit. Functions are a fundamental building block in programming and play a crucial role in code organization, reusability, and modularity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 2. How do you define a function in Python? Provide an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans.\n",
+    "\n",
+    "> In Python, we define a function using the def keyword followed by the function name, a pair of parentheses (), and a colon :. Here's the basic syntax:\n",
+    "\n",
+    "#### Syntax:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def function_name(parameters):\n",
+    "    # Code for the function\n",
+    "    # ...\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an example of a simple function that adds two numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add_numbers(a, b):\n",
+    "    result = a + b\n",
+    "    return result\n",
+    "\n",
+    "add_numbers(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example:\n",
+    "\n",
+    "* The function is named add_numbers.\n",
+    "* It takes two parameters, a and b.\n",
+    "* Inside the function, it calculates the sum of a and b and stores it in the variable result.\n",
+    "* Finally, it uses return result to send the result back."
    ]
   },
   {
@@ -3550,8 +3626,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ans.\n",
+    "\n",
+    "> A function definition defines what a function does and its structure using the def keyword. A function call executes the defined function with specific arguments, invoking its behavior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 4. Write a Python program that defines a function to calculate the sum of two numbers and then calls the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define function to calculate sum (add) of two numbers\n",
+    "def add_numbers(a, b):\n",
+    "    result = a + b\n",
+    "    return result\n",
+    "\n",
+    "# Calls the funtion\n",
+    "add_numbers(2, 3)"
    ]
   },
   {
@@ -3566,8 +3677,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A function signature is a summary of a function's essential details. It provides information about how the function can be used, what parameters it accepts, and what it returns. A typical function signature includes:\n",
+    "\n",
+    "#### Function Name:\n",
+    "This is the name used to call the function. \n",
+    "\n",
+    "#### Parameters:\n",
+    "This section lists the inputs (if any) that the function expects. Each parameter is accompanied by its name and type, and they are typically enclosed in parentheses.\n",
+    "\n",
+    "#### Return Type:\n",
+    "This indicates the type of value that the function will return after its execution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 6. Create a Python function that takes two arguments and returns their product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product of two number is: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function takes two arguments as input and returns the product\n",
+    "def multiply_numbers(a,b):\n",
+    "    return a * b\n",
+    "\n",
+    "# Printing the result\n",
+    "print(f'The product of two number is: {multiply_numbers(5, 10)}')"
    ]
   },
   {
@@ -3581,11 +3730,367 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Explain the concepts of formal parameters and actual arguments in Python functions.\n",
-    "### 2. Write a Python program that defines a function with default argument values.\n",
-    "### 3. How do you use keyword arguments in Python function calls? Provide an example.\n",
-    "### 4. Create a Python function that accepts a variable number of arguments and calculates their sum.\n",
-    "### 5. What is the purpose of the `*args` and `**kwargs` syntax in function parameter lists?\n"
+    "### 1. Explain the concepts of formal parameters and actual arguments in Python functions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans. \n",
+    "\n",
+    "* Formal Parameters: \n",
+    "These are variables listed in the function definition that act as placeholders for the values that will be passed into the function when it's called. They are like variables defined within the function's scope and represent the input data the function will work with.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a, b):  # Here, 'a' and 'b' are formal parameters.\n",
+    "    return a + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Actual Arguments: \n",
+    "These are the values or expressions that are passed to the function when it is called. They correspond to the formal parameters defined in the function's signature and provide the actual data that the function will operate on.\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = add(3, 5)  # Here, 3 and 5 are actual arguments passed to the 'add' function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the example above, a and b in the function definition are formal parameters, while 3 and 5 in the function call are actual arguments. The function will use these actual arguments to perform its operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 2. Write a Python program that defines a function with default argument values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area 1 (default values used): 1\n",
+      "Area 2: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_rectangle_area(length=1, width=1):\n",
+    "    '''\n",
+    "    This function accepts length and width of rectangle with defaul value of 1.\n",
+    "    '''\n",
+    "    area = length * width\n",
+    "    return area\n",
+    "\n",
+    "# Compute area\n",
+    "default_rect_area = calculate_rectangle_area()\n",
+    "area1 = calculate_rectangle_area(5, 3)\n",
+    "\n",
+    "# Print\n",
+    "print(f\"Area 1 (default values used): {default_rect_area}\")\n",
+    "print(f\"Area 2: {area1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. How do you use keyword arguments in Python function calls? Provide an example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keyword arguments, also known as named arguments, are values passed into a function that can be recognized by their corresponding parameter names. They are indicated by placing the parameter name followed by an equals sign (=) before the value. operator, = .\n",
+    "\n",
+    "Certainly! Let's consider a function that calculates the area of a rectangle:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_rectangle_area(length, width):\n",
+    "    '''\n",
+    "    This function accepts length and width of rectangle with defaul value of 1.\n",
+    "    '''\n",
+    "    area = length * width\n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can use keyword arguments to call this function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area 1: 15\n",
+      "Area 2: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using keyword arguments\n",
+    "area1 = calculate_rectangle_area(length=3, width=5)\n",
+    "area2 = calculate_rectangle_area(width=4, length=3)\n",
+    "\n",
+    "# Print\n",
+    "print(f\"Area 1: {area1}\")\n",
+    "print(f\"Area 2: {area2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Create a Python function that accepts a variable number of arguments and calculates their sum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result 1: 10\n",
+      "Result 2: 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_sum(*args):\n",
+    "    total_sum = 0\n",
+    "    for num in args:\n",
+    "        total_sum += num\n",
+    "    return total_sum\n",
+    "\n",
+    "# Compute sums\n",
+    "result1 = compute_sum(1, 2, 3, 4)\n",
+    "result2 = compute_sum(4, 5, 6, 7, 8, 10)\n",
+    "\n",
+    "print(f\"Result 1: {result1}\")\n",
+    "print(f\"Result 2: {result2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. What is the purpose of the `*args` and `**kwargs` syntax in function parameter lists?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `*args` and `**kwargs` syntax in function parameter lists serve the purpose of allowing Python functions to accept a variable number of arguments, both positional and keyword arguments, respectively. They provide flexibility and versatility when defining functions. Here's what each syntax does:\n",
+    "\n",
+    "`*args` (Arbitrary Positional Arguments):\n",
+    "\n",
+    "* `*args` is used to collect any number of positional arguments into a tuple.\n",
+    "* It allows you to pass an arbitrary number of positional arguments to the function.\n",
+    "* The args variable can be any name you choose, but *args is a common convention.\n",
+    "* You can think of `*args` as a way to pass multiple values to a function without having to specify each argument individually.\n",
+    "\n",
+    "Example of `*args`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_sum(*args):\n",
+    "    total_sum = 0\n",
+    "    for num in args:\n",
+    "        total_sum += num\n",
+    "    return total_sum\n",
+    "\n",
+    " # Accepts any number of positional arguments\n",
+    "result = compute_sum(1, 2, 3, 4, 5) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`**kwargs` (Arbitrary Keyword Arguments):\n",
+    "\n",
+    "* **kwargs is used to collect any number of keyword arguments into a dictionary.\n",
+    "* It allows you to pass an arbitrary number of keyword arguments to the function.\n",
+    "* The kwargs variable can be any name you choose, but **kwargs is a common convention.\n",
+    "*  You can think of **kwargs as a way to pass multiple keyword-value pairs to a function without having to specify each pair individually.\n",
+    "\n",
+    "Example of `**kwargs`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Robin\n",
+      "age: 35\n",
+      "city: Noida\n",
+      "occupation: Software Developer\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_key_value_details(**kwargs):\n",
+    "    for key, value in kwargs.items():\n",
+    "        print(f\"{key}: {value}\")\n",
+    "\n",
+    "# Print details\n",
+    "print_key_value_details(name=\"Robin\", age=35, city=\"Noida\", occupation=\"Software Developer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Return Values and Scoping:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Describe the role of the `return` statement in Python functions and provide examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Explain the concept of variable scope in Python, including local and global variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Write a Python program that demonstrates the use of global variables within functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Create a Python function that calculates the factorial of a number and returns it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 5. How can you access variables defined outside a function from within the function?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda Functions and Higher-Order Functions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. What are lambda functions in Python, and when are they typically used?\n",
+    "### 2. Write a Python program that uses lambda functions to sort a list of tuples based on the second element.\n",
+    "### 3. Explain the concept of higher-order functions in Python, and provide an example.\n",
+    "### 4. Create a Python function that takes a list of numbers and a function as arguments, applying the function to each element in the list.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Built-in Functions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Describe the role of built-in functions like `len()`, `max()`, and `min()` in Python.\n",
+    "### 2. Write a Python program that uses the `map()` function to apply a function to each element of a list.\n",
+    "### 3. How does the `filter()` function work in Python, and when would you use it?\n",
+    "### 4. Create a Python program that uses the `reduce()` function to find the product of all elements in a list.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function Documentation and Best Practices:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Explain the purpose of docstrings in Python functions and how to write them.\n",
+    "### 2. Describe some best practices for naming functions and variables in Python, including naming conventions and guidelines."
    ]
   }
  ],
